TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "132033091368032" [label="Start"];
  "132033091368032" -> "132033091366208";
  "132033091366208" [label="Code"];
  "132033091366208" -> "132033091367744";
  "132033091367744" [label="Function"];
  "132033091367744" -> "132033091370768";
  "132033091367744" -> "132033091369904";
  "132033091367744" -> "132033091368176";
  "132033091370768" [label="main IDENTIFIER"];
  "132033091369904" [label="Parameters"];
  "132033091368176" [label="Code"];
  "132033091368176" -> "132033091355504";
  "132033091368176" -> "132033091354736";
  "132033091368176" -> "132033091370960";
  "132033091368176" -> "132033091366352";
  "132033091368176" -> "132033091354880";
  "132033091368176" -> "132033091363856";
  "132033091355504" [label="Declaration"];
  "132033091355504" -> "132033091369232";
  "132033091355504" -> "132033091369184";
  "132033091369232" [label="x IDENTIFIER"];
  "132033091369184" [label="4 INT"];
  "132033091354736" [label="Declaration"];
  "132033091354736" -> "132033091361024";
  "132033091354736" -> "132033091360736";
  "132033091361024" [label="b IDENTIFIER"];
  "132033091360736" [label="9632 INT"];
  "132033091370960" [label="Declaration"];
  "132033091370960" -> "132033091369040";
  "132033091370960" -> "132033091364144";
  "132033091369040" [label="x_ptr IDENTIFIER"];
  "132033091364144" [label="b IDENTIFIER"];
  "132033091366352" [label="Comment"];
  "132033091366352" -> "132033091364192";
  "132033091364192" [label="*x_ptr = x; //Invalid: const assignment COMMENT"];
  "132033091354880" [label="Assignment"];
  "132033091354880" -> "132033091368560";
  "132033091354880" -> "132033091360592";
  "132033091368560" [label="x_ptr IDENTIFIER"];
  "132033091360592" [label="x IDENTIFIER"];
  "132033091363856" [label="Return"];
  "132033091363856" -> "132033091496848";
  "132033091363856" -> "132033091492672";
  "132033091496848" [label="return T__34"];
  "132033091492672" [label="0 INT"];
}
